Update Team Members “06-14-42-”

--- a/v1/content/team-members/06-14-42-.md
+++ b/v1/content/team-members/06-14-42-.md
@@ -2,67 +2,43 @@
 team: Autonomous Development
 isDirectorsBoard: false
 head:
-  name: Khaled Hesham
-  image: /img/khaled-hesham-khaled-hesham-sayed-taha.png
-  email: kha.hesham@gmail.com
-  linkedin: https://www.linkedin.com/in/khaled-hesham-6394561b5/
+  name: Mahmoud Mostafa
+  image: /img/mahmoud-mostafa-dev-leader.jpg
+  email: ""
+  linkedin: ""
   facebook: ""
-  github: https://github.com/khaHesham
+  github: ""
 members:
-  - name: Ibrahim Mohamed
-    image: /img/screenshot_20231114_215447_gallery-ibrahim-mohamed.jpg
-    role: Vice Head
-    email: ibrahim.mohamed01@eng-st.cu.edu.eg
-    linkedin: https://www.linkedin.com/in/1brahimmohamed
-  - name: "Mahmoud Mostafa Ahmed Ismail "
-    role: Vice Head
-    image: /img/img_20230614_142400-1-mahmoud-ismail-1-1-.jpg
-    email: mahmoud.ismail702@eng-st.cu.edu.eg
-    linkedin: https://www.linkedin.com/in/ma7moud-mostafa
-  - name: Beshoy Morad
-    image: /img/me-beshoy-morad.jpg
+  - name: Abdelrahman Elbana
+    image: /img/abdelrahmanelbana-dev-pathplanning.jpg
     role: Member
-    email: beshoymorad2002@gmail.com
-    linkedin: https://www.linkedin.com/in/beshoymorad/
-    facebook: https://www.facebook.com/iiBesh00/
-  - name: "Abdullah Sabry "
-    image: /img/screenshot_20231112-224546-abdullah-hassanein-1-.jpg
+  - name: Abdelrahman Tarek
+    image: /img/abdelrahman-tarek-_-control.jpg
     role: Member
-    email: abdullahsabry02@gmail.com
-    linkedin: https://www.linkedin.com/in/abdullah-sabry-8b5352221?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
-  - name: "Ali Mohammad Zayan "
-    image: /img/٢٠٢٣١١١٢_٢٢٢١٢٥-ali-esmail-1-.jpg
+  - name: Ahmad Sanad
+    image: /img/ahmed-sanad-dev-team_-control.jpg
     role: Member
-    email: Ali.Esmail03@eng-st.cu.edu.eg
-    linkedin: https://www.linkedin.com/in/ali-zayan-b98239264?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
-  - name: Yara Hisham
-    image: /img/snapchat-1890188244-yara-mahrous-1-1-.jpg
+  - name: Ali Zayan
+    image: /img/ali_zayan-dev-pathplanning.jpg
     role: Member
-    email: yara.mahrous01@eng-st.cu.edu.eg
-    linkedin: https://www.linkedin.com/in/yaramahrous61/
-  - name: Amira Abdelghany
-    image: /img/img_6510-amira-abdelghany-1-1-.jpg
+  - name: Bishoy George
+    image: /img/bishoy-george.jpeg
     role: Member
-    email: amiraabdelghany764@gmail.com
-    linkedin: https://www.linkedin.com/in/amira-abdelghany-2757071b2
-    facebook: https://www.facebook.com/amira.es764?mibextid=LQQJ4d
-  - name: Farida Moukhtar
-    image: /img/dsc_2988-farida-moukhtar.jpg
+  - name: Mahmoud Hossam
+    image: /img/mahmoud_hossam_dev_pathplanning.jpg
     role: Member
-    email: farida.moukhtar03@eng-st.cu.edu.eg
-    linkedin: https://www.linkedin.com/in/farida-moukhtar/
-    facebook: https://web.facebook.com/profile.php?id=100009732034254
-  - name: Abdelrahman Noaman Loqman
-    image: /img/abdelrahman-noaman-loqman.jpeg
+  - name: Mohamed Ezzelrgal
+    image: /img/mohamed-ezzelrgal-dev_control-team.jpg
     role: Member
-    email: abdelrahmannoaman1@gmail.com
-    linkedin: https://www.linkedin.com/in/abdulrahman-noaman-78b362205
-    facebook: https://www.facebook.com/3abdelrahman.no3man
-  - name: Abdal-hameed Emad
-    image: /img/img_8545-abdal-hameed-emad.jpg
+  - name: Salah Mohamed
+    image: /img/salah-mohamed-development-team-slam.jpg
     role: Member
-    email: medo.emadd23@gmail.com
-    linkedin: https://www.linkedin.com/in/abdal-hameed-emad-740097227
+  - image: /img/screenshot_20241008-110013.jpg
+    role: Member
+    name: Abdullah Sabry
+  - name: Sharif Ehab
+    image: /img/sharif-ehab_dev_perception.jpg
+    role: Member
 ---
 **Cairo University Eco Racing Team - Autonomous Development Sub Team**
 
