Update Team Members “12-18-22-”

--- a/v1/content/team-members/12-18-22-.md
+++ b/v1/content/team-members/12-18-22-.md
@@ -2,14 +2,14 @@
 team: Media-Marketing
 isDirectorsBoard: false
 head:
-  name: Nedal Khaled
-  image: /img/nedal-khaled.jpg
+  name: Cyrell Evans
+  image: /img/cyrell-evans.jpg
 members:
   - name: Abdelrhman Muhammad
     image: /img/abdelrhman-muhammad-media.jpg
     role: Member
-  - name: Cyrell Evans
-    image: /img/cyrell-evans.jpg
+  - name: Nedal Khaled
+    image: /img/nedal-khaled.jpg
     role: Member
   - name: Ibrahim Samy
     image: /img/ibrahim-samy-media_marketing.jpg
