--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -7,13 +7,13 @@ head:
   email: cairo.university.eco.racing.team@gmail.com
   linkedin: ""
 members:
+  - name: Dalia Abdallah
+    role: Director
+    image: /img/dalia-abdallah-communication-director.png
+    email: null
   - name: "Osama Hamdy "
     role: Director
     email: ""
     image: /img/osama-hamdy-technical-director.jpg
-  - name: Dalia Abdallah
-    role: Director
-    image: /img/dalia-abdallah-communication-director.png
-    email: ---
 ---
 directors
