Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -3,13 +3,13 @@ team: Team Manager
 isDirectorsBoard: true
 head:
   name: Menna Soliman
-  image: /img/menna-soliman-team-manager.png
+  image: /img/dalia.jpeg
   email: cairo.university.eco.racing.team@gmail.com
   linkedin: ""
 members:
   - name: Dalia Abdallah
     role: Director
-    image: /img/dalia-abdallah-communication-director.png
+    image: /img/co.jpeg
     email: null
   - name: "Osama Hamdy "
     role: Director
