Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -3,7 +3,7 @@ team: Team Manager
 isDirectorsBoard: true
 head:
   name: Menna Soliman
-  image: /img/dalia.jpeg
+  image: /img/co2.jpeg
   email: cairo.university.eco.racing.team@gmail.com
   linkedin: ""
 members:
