--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -3,13 +3,13 @@ team: Team Manager
 isDirectorsBoard: true
 head:
   name: Menna Soliman
-  image: /img/screenshot-from-2025-04-16-01-14-45.png
+  image: /img/dalia.jpeg
   email: cairo.university.eco.racing.team@gmail.com
   linkedin: ""
 members:
   - name: Dalia Abdallah
     role: Director
-    image: /img/co.jpeg
+    image: /img/screenshot-from-2025-04-16-01-14-45.png
     email: null
   - name: "Osama Hamdy "
     role: Director
