--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -9,7 +9,7 @@ head:
 members:
   - name: Dalia Abdallah
     role: Director
-    image: /img/screenshot-from-2025-04-16-01-14-45.png
+    image: /img/co3.jpeg
     email: null
   - name: "Osama Hamdy "
     role: Director
