Update Team Members “12-14-43-”

--- a/v1/content/team-members/12-14-43-.md
+++ b/v1/content/team-members/12-14-43-.md
@@ -2,23 +2,17 @@
 team: Body&Chassis
 isDirectorsBoard: false
 head:
-  name: omar essam eldin
-  image: /img/file-omar-essam-eldin.jpg
+  name: mohamed khaled
+  image: /img/mohamed-khaled-body-chassis.jpg
 members:
   - name: ِAbdullah Gamal
     image: /img/ِabdullah-gamal-body-chassis.jpg
-    role: Member
-  - name: Alaa Salah
-    image: /img/alaa-salah-body-chassis.jpg
     role: Member
   - name: Hesham Mohamed
     image: /img/hesham-mohamed-body-chassis.jpg.jpg
     role: Member
   - name: "Mohammed Abdou "
     image: /img/mohammed-abdou-body-chassis.jpg
-    role: Member
-  - name: Mohamed Khaled
-    image: /img/mohamed-khaled-body-chassis.jpg
     role: Member
 ---
 **Cairo University Eco Racing Team - Body and Chassis Sub Team**
