Update Team Members “06-14-37-”

--- a/v1/content/team-members/06-14-37-.md
+++ b/v1/content/team-members/06-14-37-.md
@@ -2,15 +2,12 @@
 team: Power Electronics
 isDirectorsBoard: false
 head:
-  name: Muhammed yasser muhammed
-  image: /img/mohammed_yasser-power_electronics.jpg
+  name: mahmoud khaled
+  image: /img/mahmoud-khaled-power-electronics.jpg
   email: ""
   linkedin: ""
   facebook: ""
 members:
-  - name: Mahmoud khaled
-    image: /img/mahmoud-khaled-power-electronics.jpg
-    role: Member
   - name: Mahmoud Hefny
     image: /img/mahmoud-hefny-power-electronics.jpg
     role: Member
