Update Team Members “06-14-42-”

--- a/v1/content/team-members/06-14-42-.md
+++ b/v1/content/team-members/06-14-42-.md
@@ -9,15 +9,6 @@ head:
   facebook: ""
   github: ""
 members:
-  - name: Abdelrahman Elbana
-    image: /img/abdelrahmanelbana-dev-pathplanning.jpg
-    role: Member
-  - name: Abdelrahman Tarek
-    image: /img/abdelrahman-tarek-_-control.jpg
-    role: Member
-  - name: Ahmad Sanad
-    image: /img/ahmed-sanad-dev-team_-control.jpg
-    role: Member
   - name: Ali Zayan
     image: /img/ali_zayan-dev-pathplanning.jpg
     role: Member
@@ -27,17 +18,14 @@ members:
   - name: Mahmoud Hossam
     image: /img/mahmoud_hossam_dev_pathplanning.jpg
     role: Member
-  - name: Mohamed Ezzelrgal
-    image: /img/mohamed-ezzelrgal-dev_control-team.jpg
-    role: Member
   - name: Salah Mohamed
     image: /img/salah-mohamed-development-team-slam.jpg
     role: Member
   - image: /img/screenshot_20241008-110013.jpg
     role: Member
     name: Abdullah Sabry
-  - name: Sharif Ehab
-    image: /img/sharif-ehab_dev_perception.jpg
+  - name: Abdelrahman elbana
+    image: /img/abdelrahmanelbana-dev-pathplanning.jpg
     role: Member
 ---
 **Cairo University Eco Racing Team - Autonomous Development Sub Team**
