Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -2,9 +2,9 @@
 team: Team Manager
 isDirectorsBoard: true
 head:
-  name: Menna Soliman
-  image: /img/dalia.jpeg
-  email: cairo.university.eco.racing.team@gmail.com
+  name: "Waleed Ashraf "
+  image: /img/waleed_team-manager.jpeg
+  email: w.ashraf2002@gmail.com
   linkedin: ""
 members:
   - name: Dalia Abdallah
