Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -7,10 +7,10 @@ head:
   email: w.ashraf2002@gmail.com
   linkedin: ""
 members:
-  - name: Dalia Abdallah
+  - name: "Ahmed Emad "
     role: Director
-    image: /img/screenshot-from-2025-04-16-01-28-02.png
-    email: null
+    image: /img/1355658.jpeg
+    email: commdirectorycuert@gmail.com
   - name: "Osama Hamdy "
     role: Director
     email: ""
