Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -11,9 +11,9 @@ members:
     role: Director
     image: /img/1355658.jpeg
     email: commdirectorycuert@gmail.com
-  - name: "Osama Hamdy "
+  - name: "Nancy Motawadea "
     role: Director
-    email: ""
-    image: /img/osama-hamdy-technical-director.jpg
+    email: "commdirectorycuert@gmail.com "
+    image: /img/nancy_comm.-direct..jpg
 ---
 directors
