Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -15,5 +15,9 @@ members:
     role: Director
     email: "commdirectorycuert@gmail.com "
     image: /img/nancy_comm.-direct..jpg
+  - name: David Nader
+    image: /img/david-nader_mech-direc..heic
+    role: Director
+    email: david.nessem03@eng-st.cu.edu.eg
 ---
 directors
