Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -19,5 +19,13 @@ members:
     image: /img/david-nader_mech-direc..heic
     role: Director
     email: david.nessem03@eng-st.cu.edu.eg
+  - name: Mohamed Yasser
+    role: Director
+    email: Mohammedkher844@gmail.com
+    image: /img/mohamed-yasser_elect.-direc..jpeg
+  - name: Mohamed Khaled
+    image: /img/mohamed-khaled_tech.-direct..jpeg
+    role: Director
+    email: moamedsaid450@gmail.com
 ---
 directors
